#392. Make perfcake.sh work with jdk 11